new user validation setup

--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -3,18 +3,47 @@
 
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Sign Up</title>
 </head>
 
 <body>
     <h1>Sign Up</h1>
+
+     <%- include("partials/error.ejs") %>
+
     <form action="/sign-up" method="POST">
+        <label for="firstName">First Name</label>
+        <input type="text" name="firstName">
+
+        <label for="lastName">Last Name</label>
+        <input type="text" name="lastName">
+
         <label for="username">Username</label>
         <input id="username" name="username" placeholder="username" type="text" />
+
         <label for="password">Password</label>
         <input id="password" name="password" type="password" />
-        <button>Sign Up</button>
+        <label for="confirmPassword">Confirm Password</label>
+        <input id="confirmPassword" name="confirmPassword" type="password" />
+
+        <br>
+        <label for="membershipStatus">Enter secret membership code:</label>
+        <input type="number" name="membershipStatus" id="secretCodeInput">
+        <button id="signupButton" disabled>Sign Up</button>
     </form>
+
+    <script>
+        let signupButton = document.getElementById("signupButton");
+        let secretCodeInput = document.getElementById("secretCodeInput");
+
+        secretCodeInput.addEventListener("input", function () {
+            if (secretCodeInput.value == 420) {
+                signupButton.disabled = false;
+            } else {
+                signupButton.disabled = true;
+            }
+        });
+    </script>
 </body>
 
 </html>
