--- a/views/messageBoard.ejs
+++ b/views/messageBoard.ejs
@@ -8,9 +8,9 @@
 
 <body>
     <% if (locals.user) {%>
-        <h1>WELCOME BACK <%= user.username %>
-        </h1>
+        <h1>WELCOME TO THE MESSAGE BOARD, <%= user.username %>  </h1>
         <a href="/log-out">LOG OUT</a>
+        
         <% } else { %>
             <h1>please log in</h1>
             <form action="/log-in" method="POST">
