setup message viewing priviliges exclusively for members

--- a/views/messageBoard.ejs
+++ b/views/messageBoard.ejs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,21 +6,26 @@
 </head>
 
 <body>
-    <% if (locals.user) {%>
-        <h1>WELCOME TO THE MESSAGE BOARD, <%= user.username %>  </h1>
+    <% if (locals.user) { %>
+        <h1>WELCOME TO THE MESSAGE BOARD, <%= user.username %></h1>
         <a href="/log-out">LOG OUT</a>
-        
-        <% } else { %>
-            <h1>please log in</h1>
-            <form action="/log-in" method="POST">
-                <label for="username">Username</label>
-                <input id="username" name="username" placeholder="username" type="text" />
-                <label for="password">Password</label>
-                <input id="password" name="password" type="password" />
-                <button>Log In</button>
-            </form>
-            <a href="/sign-up">sign-up</a>
-            <%}%>
+<% console.log(user) %>
+        <%- include("./partials/newMsg") %>
+            <%- include("./partials/displayMessages") %>
+                <% } else { %>
+<% console.log(user) %>
+                    <h1>please log in</h1>
+                    <form action="/log-in" method="POST">
+                        <label for="username">Username</label>
+                        <input id="username" name="username" placeholder="username" type="text" />
+                        <label for="password">Password</label>
+                        <input id="password" name="password" type="password" />
+                        <button>Log In</button>
+                    </form>
+                    <a href="/sign-up">sign-up</a>
+                                <%- include("./partials/displayMessages") %>
+
+                    <% } %>
 </body>
 
 </html>
