--- a/views/partials/newMsg.ejs
+++ b/views/partials/newMsg.ejs
@@ -1,7 +1,12 @@
 <form action="/newMsg" method="post">
-    <input type="text" name="posterUsername" value="<%= user.username%>" style="display: none;" >
+  <input
+    type="text"
+    name="posterUsername"
+    value="<%= user.username%>"
+    style="display: none"
+  />
 
-    <label for="message">message</label>
-    <input type="text" name="message" id="">
-    <button type="submit">POST</button>
+  <label for="message">message</label>
+  <input type="text" name="message" id="" />
+  <button type="submit">POST</button>
 </form>
