--- a/views/partials/error.ejs
+++ b/views/partials/error.ejs
@@ -1,10 +1,8 @@
 <!-- views/partials/errors.ejs -->
 <% if (locals.errors) {%>
-    <ul>
-        <% errors.forEach(function(error) { %>
-            <li>
-                <%= error.msg %>
-            </li>
-            <% }); %>
-    </ul>
-    <% } %>
+<ul>
+  <% errors.forEach(function(error) { %>
+  <li><%= error.msg %></li>
+  <% }); %>
+</ul>
+<% } %>
